--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   ],
   "dependencies": {
     "buffer": "^4.9.1",
-    "sjcl": "^1.0.3"
+    "sjcl": "git+https://github.com/eluv-io/react-native-sjcl.git"
   },
   "author": "Mark Vayngrib <mark.vayngrib@lablz.com> (http://github.com/mvayngrib)",
   "license": "ISC"
